--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.20",
-    "@dtdot/lego": "^0.10.4",
+    "@dtdot/lego": "^0.12.5",
     "@dtdot/notifications": "0.0.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -13,6 +13,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
     "graphql": "^15.5.1",
     "joi": "^17.4.0",
     "qs": "^6.10.1",
